[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "deep-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["wugx <wugx@seer-group.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1"
gym = "^0.26"
matplotlib = ">=3.0.0"
tensorboard = "^2.5.0"
# Torch 2.0.1 causes problems, see https://github.com/pytorch/pytorch/issues/100974
torch = "^2.0.0, !=2.0.1, !=2.1.0"
tqdm = "*"
opencv-python = "^4.10.0.84"
pyzmq = "^26.2.0"
pandas = "^2.2.3"
poetry-core = "^1.9.0"
torchvision = "^0.19.1"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"
